W 16554282.library upgrade (#991)
* W-16554282: Library upgrades

* W-16554282: Fix build

* W-16554282: More library upgrade

* W-16554282: JUnit 5 upgrade

* W-16554282: Add deserializerNameRecord unit test

* W-16554282: Update version

* W-16554282: log error for invalidLeafMetricsReceived

* W-16554282: Fix rpm build

* W-16554282: Fix build

* W-16554282: Upgrade gradle 8.10 to 8.10.1